tests/ui/comptime/comptime_trait.stderr
error: the `rustc_comptime` attribute cannot be used on traits
  --> $DIR/comptime_trait.rs:3:3
   |
LL | #[rustc_comptime]
   |   ^^^^^^^^^^^^^^
   |
   = help: the `rustc_comptime` attribute can be applied to functions and inherent impl blocks

error: the `rustc_comptime` attribute cannot be used on trait impl blocks
  --> $DIR/comptime_trait.rs:11:3
   |
LL | #[rustc_comptime]
   |   ^^^^^^^^^^^^^^
   |
   = help: the `rustc_comptime` attribute can be applied to functions and inherent impl blocks

error: the `rustc_comptime` attribute cannot be used on trait aliases
  --> $DIR/comptime_trait.rs:22:3
   |
LL | #[rustc_comptime]
   |   ^^^^^^^^^^^^^^
   |
   = help: the `rustc_comptime` attribute can be applied to functions and inherent impl blocks

error[E0015]: cannot call non-const method `<T as Trait>::method` in constants
  --> $DIR/comptime_trait.rs:28:7
   |
LL |     t.method()
   |       ^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0015`.
